--- a/index.html
+++ b/index.html
@@ -5,7 +5,25 @@
     <meta charset="utf-8">
     <title>Excursion</title>
   </head>
-  <body>
-
+    <body>
+    <!--first section-->
+<h1>Discover hidden places in the world around you</h1>
+<!--video section-->
+<p><a class="sub" href="#">Download Excursion (Coming soon!)</a></p>
+<!--second section-->
+  <div>
+<video autoplay muted loop src= "./resources/videos/excursion.mp4" </video>
+  </div>
+  <!--third section-->
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <!--image section-->
+      <img src= "./resources/images/camp.jpg"/>
+    <p><img src= "./resources/images/phone.png"/></p>
+    <!--fourth section-->
+   <h2>Coming Soon for iPhone and Android</h2>
+     <p><a class="sub" href="#">Download Excursion (Coming soon!)</a></p>
+     <!--foot section-->
+       <p id="foot">© Excursion</p>
   </body>
 </html>
